app.json: add heroku addons

--- a/app.json
+++ b/app.json
@@ -9,6 +9,10 @@
   ],
   "environments": {
     "test": {
+      "addons":[
+         "heroku-redis",
+         "heroku-postgresql"
+      ],
       "scripts": {
         "test": "rspec"
       }
